before converting flappy to vue state

--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "axios": "^0.18.0",
     "blockstack": "^19.2.5",
     "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.1.0",
     "core-js": "^2.6.5",
-    "radiks": "^0.1.0",
+    "radiks": "^0.2.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.2"
