--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
     "radiks": "^0.2.1",
+    "socket.io": "^2.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.2"
