--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
-  "name": "bs-todo",
-  "version": "6.0.1",
-  "description": "A decentralized Todo app built on Blockstack",
-  "author": "Michael Stivala <michaelstivala@me.com> (https://michaelstivala.com/)",
-  "contributors": [
-    "Aaron Blankstein <aaron@blockstack.com> (https://github.com/kantai)",
-    "Larry Salibra <hello@larrysalibra.com> (https://larrysalibra.com/)",
-    "Arjun Balaji <arjunblj@gmail.com> (https://github.com/arjunblj)",
-    "Kim Hallberg <work@hallberg.kim> (https://hallberg.kim/)",
-    "Guy Lepage <guylepage3@gmail.com> (https://lepage.cc/)",
-    "Jack Zampolin (https://github.com/jackzampolin)",
-    "Moxiegirl (https://github.com/moxiegirl)"
-  ],
+  "name": "dappgames",
+  "version": "1.0.0",
+  "description": "A decentralized Games platform",
+  "author": "Mohamed Elbaruni",
   "repository": {
     "type": "git",
-    "url": "https://github.com/blockstack/blockstack-todos"
+    "url": "https://github.com/elbaruni/Dapp-Games"
   },
   "private": true,
   "scripts": {
